--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-full navbar-light">
   <div class="container-fluid">
     <div>
-      <a class="navbar-brand" [routerLink]="['Home']"><i class="fa fa-fw fa-comment-o"></i>&nbsp;FlowChat</a>
+      <a class="navbar-brand" [routerLink]="['/']"><i class="fa fa-fw fa-comment-o"></i>&nbsp;FlowChat</a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <form class="form-inline">
