--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
   <ul *ngIf="popularTags" class="list-inline">trending tags:
     <li class="label label-default list-inline-item"
       *ngFor="let tag of popularTags">
-      <a class="link-unstyled" [routerLink]="['/Tag', {tagId: tag.id}]">{{removeQuotes(tag.name)}}</a>
+      <a class="link-unstyled" [routerLink]="['/tag', tag.id]">{{removeQuotes(tag.name)}}</a>
     </li>
   </ul>
   </small>
