Got new routing working

--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -45,7 +45,7 @@
               aria-hidden="true" tooltipPlacement="bottom" tooltip="Link"></i></a>
           </li>
           <li class="list-inline-item" role="button">
-            <a [routerLink]="['/discussion', discussion?.id]">
+            <a [routerLink]="['/discussion', discussion?.id]" class="link-unstyled">
               <i class="fa fa-fw fa-comments-o" tooltipPlacement="bottom"
                 tooltip="Comments"></i></a>
           </li>
