--- a/ui/src/app/styles/vendor.scss
+++ b/ui/src/app/styles/vendor.scss
@@ -1,4 +1,4 @@
-@import './custom.scss';
+@import './custom';
 @import '../../../node_modules/bootstrap/scss/bootstrap-flex';
 @import './slider';
 @import '../../../node_modules/angular2-toaster/lib/toaster';
