Halfway done upgrading ng2-bootstrap

--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -55,6 +55,7 @@
             (input)="updateDiscussionRank($event.target.value)"
             type="range" min="0" max="100"
             step="1" (value)="discussion?.userRank"
+            name="discussion_rank"
           />
         </div>
       </div>
@@ -65,7 +66,8 @@
           <label class="col-sm-1 form-control-label">Title</label>
           <div class="col-sm-11">
             <input [(ngModel)]="discussion.title" class="form-control"
-              maxlength="140" />
+              maxlength="140" 
+              name="discussion_title"/>
           </div>
         </div>
         <div class="form-group row">
@@ -74,6 +76,7 @@
             <input [(ngModel)]="discussion.link" #discussionLink="ngForm"
               placeholder="optional" class="form-control"
               pattern="[-a-zA-Z0-9@:%_\+.~#?&//=]{2,256}\.[a-z]{2,4}\b(\/[-a-zA-Z0-9@:%_\+.~#?&//=]*)?"
+              name="discussion_link"
             />
             <div *ngIf="discussionLink.dirty" class="row col-sm-12 help-block text-danger">
               <small *ngIf="discussionLink.errors?.pattern">Invalid URL</small>
@@ -83,7 +86,7 @@
         <div class="checkbox">
           <label>
             <input [(ngModel)]="discussion.private_"
-              type="checkbox" /> Private
+              type="checkbox" name="discussion_private" /> Private
           </label>
         </div>
         <app-markdown-edit [focus]="false" [inputText]="discussion.text"
@@ -99,7 +102,8 @@
               (typeaheadLoading)="tagChangeTypeaheadLoading($event)"
               (typeaheadNoResults)="tagChangeTypeaheadNoResults($event)"
               class="form-control" minlength="5"
-              maxlength="20" pattern="[a-zA-Z0-9_-]+">
+              maxlength="20" pattern="[a-zA-Z0-9_-]+"
+              name="tag_search">
             <button [disabled]="!tagTerm.valid || tagTerm.value.length == 0"
               (click)="createTag()" class="input-group-addon btn btn-primary"><i class="fa fa-fw fa-plus"></i></button>
           </div>
@@ -135,7 +139,8 @@
               [typeaheadOptionField]="'name'"
               (typeaheadLoading)="userChangeTypeaheadLoading($event)"
               (typeaheadNoResults)="userChangeTypeaheadNoResults($event)"
-              class="form-control">
+              class="form-control"
+              name="user_search">
             <div *ngIf="userTypeaheadLoading===true">
               <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
             </div>
@@ -163,7 +168,8 @@
               [typeaheadOptionField]="'name'"
               (typeaheadLoading)="blockedUserChangeTypeaheadLoading($event)"
               (typeaheadNoResults)="blockedUserChangeTypeaheadNoResults($event)"
-              class="form-control">
+              class="form-control"
+              name="block_user_search">
             <div *ngIf="blockedUserTypeaheadLoading===true">
               <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
             </div>
