--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -95,12 +95,13 @@
         <div class="form-group row">
           <label class="col-sm-1 form-control-label">Tags</label>
           <div class="col-md-5 input-group">
-            <input #tagTerm="ngForm" (keyup)="tagSearch(tagTerm.value)"
-              [(ngModel)]="tagSearchTerm" [typeahead]="tagSearchResults"
+            <input #tagTerm="ngForm"
+              [(ngModel)]="tagSearchSelected" [typeahead]="tagSearchResultsObservable"
               (typeaheadOnSelect)="tagTypeaheadOnSelect($event.item)"
               [typeaheadOptionField]="'name'"
               (typeaheadLoading)="tagChangeTypeaheadLoading($event)"
-              (typeaheadNoResults)="tagChangeTypeaheadNoResults($event)"
+              (typeaheadNoResults)="tagChangeTypeaheadNoResults($event)" 
+              [typeaheadWaitMs]="200"
               class="form-control" minlength="5"
               maxlength="20" pattern="[a-zA-Z0-9_-]+"
               name="tag_search">
@@ -132,13 +133,14 @@
         <div *ngIf="discussion?.private_" class="form-group row">
           <label class="col-sm-1 form-control-label">Invite Users</label>
           <div class="col-md-5">
-            <input #userTerm (keyup)="userSearch(userTerm.value)"
-              [(ngModel)]="userSearchTerm"
-              [typeahead]="userSearchResults"
+            <input #userTerm="ngForm"
+              [(ngModel)]="userSearchSelected"
+              [typeahead]="userSearchResultsObservable"
               (typeaheadOnSelect)="userTypeaheadOnSelect($event.item)"
               [typeaheadOptionField]="'name'"
               (typeaheadLoading)="userChangeTypeaheadLoading($event)"
               (typeaheadNoResults)="userChangeTypeaheadNoResults($event)"
+              [typeaheadWaitMs]="200"
               class="form-control"
               name="user_search">
             <div *ngIf="userTypeaheadLoading===true">
@@ -161,13 +163,14 @@
         <div class="form-group row">
           <label class="col-sm-1 form-control-label">Block Users</label>
           <div class="col-md-5">
-            <input #blockedUserTerm (keyup)="blockedUserSearch(blockedUserTerm.value)"
-              [(ngModel)]="blockedUserSearchTerm"
-              [typeahead]="blockedUserSearchResults"
+            <input #blockedUserTerm="ngForm"
+              [(ngModel)]="blockedUserSearchSelected"
+              [typeahead]="blockedUserSearchResultsObservable"
               (typeaheadOnSelect)="blockedUserTypeaheadOnSelect($event.item)"
               [typeaheadOptionField]="'name'"
               (typeaheadLoading)="blockedUserChangeTypeaheadLoading($event)"
               (typeaheadNoResults)="blockedUserChangeTypeaheadNoResults($event)"
+              [typeaheadWaitMs]="200"
               class="form-control"
               name="block_user_search">
             <div *ngIf="blockedUserTypeaheadLoading===true">
