--- a/ui/src/app/components/markdown-edit/markdown-edit.component.html
+++ b/ui/src/app/components/markdown-edit/markdown-edit.component.html
@@ -60,5 +60,6 @@
   <textarea #textArea *ngIf="!previewMode"
     class="form-control" ngDefaultControl [(ngModel)]="textBox"
     (keyup)="setText()" rows="{{rows}}"></textarea>
+    {{html | json}}
   <div *ngIf="previewMode" [innerHTML]="html"></div>
 </fieldset>
