--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -12,18 +12,17 @@
       </small>
     </div>
     <div class="col-xs-12 col-md-2">
-      <select [(ngModel)]="discussionSorting" (change)="resort()" class="form-control">
+      <select [ngModel]="discussionSorting" (ngModelChange)="resort($event)" class="form-control">
         <option disabled>Sorting</option>
         <option disabled>──────────</option>
-        <option [value]="modified$desc">New</option>
-        <option [value]="time-3600" selected="selected">Hour</option>
-        <option [value]="time-86400">Day</option>
-        <option [value]="time-604800">Week</option>
-        <option [value]="time-2628000">Month</option>
-        <option [value]="time-31540000">Year</option>
-        <option [value]="avg_rank$desc">All-Time</option>
+        <option value="modified__desc">New</option>
+        <option value="time-3600">Hour</option>
+        <option value="time-86400">Day</option>
+        <option value="time-604800">Week</option>
+        <option value="time-2628000">Month</option>
+        <option value="time-31540000">Year</option>
+        <option value="avg_rank__desc">All-Time</option>
       </select>
-      <p>{{discussionSorting}}</p>
     </div>
   </div>
   <div (window:scroll)="onScroll($event)" class="card-columns card-columns-lg-4 card-columns-md-3 card-columns-xs-1">
