--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -1,6 +1,23 @@
 <div class="container">
-  <h2 *ngIf="tag">#{{tag.name}}</h2>
-  <hr>
+  <div class="row">
+    <div class="col-xs-12 col-md-10">
+      <h2 *ngIf="tag">#{{tag.name}}</h2>
+    </div>
+    <div class="col-xs-12 col-md-2">
+      <select [ngModel]="discussionSorting" (ngModelChange)="resort($event)"
+        class="form-control">
+        <option disabled>Sorting</option>
+        <option disabled>──────────</option>
+        <option value="modified__desc">New</option>
+        <option value="time-3600">Hour</option>
+        <option value="time-86400">Day</option>
+        <option value="time-604800">Week</option>
+        <option value="time-2628000">Month</option>
+        <option value="time-31540000">Year</option>
+        <option value="avg_rank__desc">All-Time</option>
+      </select>
+    </div>
+  </div>
   <div (window:scroll)="onScroll($event)" class="card-columns">
     <app-discussion-card *ngFor="let discussion of discussions"
       [discussion]="discussion"></app-discussion-card>
