--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -20,6 +20,15 @@
   column-gap: 1.25rem;
 }
 
+.card {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card:hover {
+  box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
+}
+
 .label {
   vertical-align: middle;
 }
@@ -51,6 +60,7 @@ blockquote {
 
 .dropdown-menu {
   margin: 11px 0 0;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .3);
 }
 
 .dropdown-menu>li>a {
@@ -96,6 +106,25 @@ blockquote {
   font-weight: 900;
 }
 
+.navbar {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
 .ng-pristine.ng-invalid {
   box-shadow: none;
+}
+
+.btn {
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.modal-content {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+}
+
+a {
+  transition: all 0.2s;
 }
