--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -21,12 +21,12 @@
 }
 
 .card {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .card:hover {
-  box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
 }
 
 .label {
@@ -127,4 +127,25 @@ blockquote {
 
 a {
   transition: all 0.2s;
+}
+
+// List group within cards
+.card {
+  .list-group {
+    margin-bottom: 0;
+  }
+  .list-group .list-group-item {
+    border-width: 1px 0;
+  }
+  .list-group-item:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+  }
+  .list-group .list-group-item:last-child {
+    border-bottom: 0;
+  }
+}
+
+.card-heading + .list-group .list-group-item:first-child {
+  border-top-width: 0;
 }
