--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -99,7 +99,7 @@ blockquote {
 .card-title,
 .card-text,
 .card-text>p {
-  margin-bottom: .2rem;
+  margin-bottom: .2rem !important;
 }
 
 .navbar-brand {
