--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -41,7 +41,7 @@
           <a class="nav-link link-unstyled" role="button"
             type="button" dropdownToggle tooltipPlacement="bottom"
             tooltip="Messages">
-            <span *ngIf="unreadMessages?.length > 0" class="label label-info navbar-label">{{unreadMessages?.length}}</span>
+            <span *ngIf="unreadMessages?.length > 0" class="tag tag-info navbar-label">{{unreadMessages?.length}}</span>
             <i class="fa fa-fw fa-envelope-o"></i>
           </a>
           <ul class="dropdown-menu messages-dropdown"
